--- a/index.html
+++ b/index.html
@@ -114,9 +114,7 @@
         
         <div class="section">
             <h3>🔑 Проверка подключения</h3>
-            <button class="btn" onclick="checkSupabase()">
-                Проверить Supabase подключение
-            </button>
+            <button id="supabase-btn">Проверить Supabase подключение</button>
             <div id="supabase-status" class="hidden">
                 <p class="status-message"></p>
             </div>
@@ -124,9 +122,7 @@
         
         <div class="section">
             <h3>👤 Тест авторизации OK.ru</h3>
-            <button class="btn" onclick="testOKAuth()">
-                Войти через Одноклассники
-            </button>
+            <button id="ok-btn">Войти через Одноклассники</button>
             <div id="ok-status" class="hidden">
                 <p class="status-message"></p>
             </div>
