--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
 <title>ВМесте</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<!-- OK SDK -->
-
-
 <style>
-/* ===== ОСНОВНОЙ СТИЛЬ + LOADER ===== */
 html, body {
     margin: 0;
     padding: 0;
@@ -20,6 +16,7 @@ html, body {
     overflow: hidden;
 }
 
+/* ===== LOADER ===== */
 #loading {
     position: fixed;
     inset: 0;
@@ -53,15 +50,17 @@ html, body {
     margin-top: 12px;
     color: #ffb3b3;
     font-size: 14px;
+    text-align: center;
+    max-width: 80%;
 }
 
+/* ===== APP ===== */
 #app {
     display: none;
     height: 100%;
     padding: 20px;
 }
 
-/* пример UI */
 .profile {
     display: flex;
     align-items: center;
@@ -73,13 +72,24 @@ html, body {
     height: 72px;
     border-radius: 50%;
     object-fit: cover;
+    background: rgba(255,255,255,0.2);
+}
+
+.name {
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.platform {
+    font-size: 14px;
+    opacity: 0.8;
 }
 </style>
 </head>
 
 <body>
 
-<!-- ===== LOADER ===== -->
+<!-- ===== LOADING ===== -->
 <div id="loading">
     <div class="loader"></div>
     <p id="loading-text">Подключение к OK.ru…</p>
@@ -89,16 +99,16 @@ html, body {
 <!-- ===== APP ===== -->
 <div id="app">
     <div class="profile">
-        <img id="avatar" src="" alt="">
+        <img id="avatar" alt="avatar">
         <div>
-            <div id="name"></div>
-            <div id="platform"></div>
+            <div id="name" class="name"></div>
+            <div id="platform" class="platform"></div>
         </div>
     </div>
 </div>
 
 <script>
-/* ================== UI HELPERS ================== */
+/* ================== UI ================== */
 const loadingText = document.getElementById('loading-text');
 const errorBox = document.getElementById('error');
 
@@ -115,39 +125,23 @@ function showApp() {
     document.getElementById('app').style.display = 'block';
 }
 
-/* ================== WAIT FOR OK SDK ================== */
-function waitForOKSDK(timeout = 6000) {
-    return new Promise((resolve, reject) => {
-        const start = Date.now();
-
-        (function check() {
-            if (window.OK && typeof OK.api === 'function') {
-                resolve();
-            } else if (Date.now() - start > timeout) {
-                reject(new Error('OK SDK не загрузился'));
-            } else {
-                requestAnimationFrame(check);
-            }
-        })();
-    });
-}
-
 /* ================== INIT ================== */
 document.addEventListener('DOMContentLoaded', () => {
-    init();
-});
-
-async function init() {
     setLoading('Инициализация…');
 
-    try {
-        await waitForOKSDK();
-    } catch (e) {
-        console.error(e);
-        setError('Ошибка загрузки OK SDK');
-        return; // остаёмся на loader
+    // ВАЖНО: OK SDK появляется ТОЛЬКО внутри ok.ru/game
+    if (!window.OK) {
+        setError(
+            'OK SDK недоступен.\n' +
+            'Откройте игру через сайт OK.ru'
+        );
+        return;
     }
 
+    initOK();
+});
+
+function initOK() {
     setLoading('Подключение к OK…');
 
     OK.init(() => {
@@ -169,16 +163,14 @@ function loadProfile() {
             return;
         }
 
-        // ТОЛЬКО реальные данные OK
         document.getElementById('name').textContent =
             profile.first_name + ' ' + profile.last_name;
 
         document.getElementById('avatar').src =
             profile.pic_1 || '';
 
-        const params = new URLSearchParams(location.search);
         document.getElementById('platform').textContent =
-            'Платформа: ' + (params.get('vk_platform') || 'ok');
+            'Платформа: OK.ru';
 
         showApp();
     });
