--- a/index.html
+++ b/index.html
@@ -125,52 +125,26 @@ function showApp() {
     document.getElementById('app').style.display = 'block';
 }
 
-/* ================== WAIT OK SDK ================== */
-function waitForOKSDK(timeout = 5000) {
-    return new Promise((resolve, reject) => {
-        const start = Date.now();
-
-        (function check() {
-            if (window.OK) {
-                resolve();
-            } else if (Date.now() - start > timeout) {
-                reject(new Error('OK SDK timeout'));
-            } else {
-                requestAnimationFrame(check);
-            }
-        })();
-    });
-}
-
-
 /* ================== INIT ================== */
-document.addEventListener('DOMContentLoaded', async () => {
-    setLoading('Инициализация…');
+document.addEventListener('DOMContentLoaded', () => {
+    setLoading('Загрузка профиля…');
 
-    try {
-        await waitForOKSDK();
-        loadProfile(); // ❗ сразу
-    } catch (e) {
-        console.error(e);
-        setError('OK SDK недоступен');
-    }
+    // ❗ НИКАКИХ wait / timeout / init
+    tryLoadProfile();
 });
 
+/* ================== SAFE PROFILE LOAD ================== */
+function tryLoadProfile(attempt = 0) {
+    if (!window.OK || !OK.api) {
+        if (attempt > 20) {
+            setError('OK SDK недоступен');
+            return;
+        }
 
-function initOK() {
-    setLoading('Подключение к OK…');
-
-    OK.init(() => {
-        loadProfile();
-    }, err => {
-        console.error(err);
-        setError('Ошибка инициализации OK');
-    });
-}
-
-/* ================== PROFILE ================== */
-function loadProfile() {
-    setLoading('Загрузка профиля…');
+        // пробуем ещё раз через 100 мс
+        setTimeout(() => tryLoadProfile(attempt + 1), 100);
+        return;
+    }
 
     OK.api('users.getCurrentUser', {}, profile => {
         if (!profile || profile.error_code) {
@@ -192,6 +166,7 @@ function loadProfile() {
     });
 }
 </script>
+
 
 
 </body>
