--- a/index.html
+++ b/index.html
@@ -1,195 +1,229 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<meta charset="UTF-8" />
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ВМесте 🌊 | OK.ru</title>
+<title>ВМесте 🌊 | Океан посланий из OK.ru</title>
 
-<!-- VK Bridge -->
-<script src="https://unpkg.com/@vkontakte/vk-bridge/dist/browser.min.js"></script>
-
-<!-- Supabase -->
+<!-- Supabase JS -->
 <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
 
 <style>
-/* ====== СТИЛИ (СОКРАЩЕНО БЕЗ ПОТЕРИ ВИДА) ====== */
-body{
-  margin:0;
-  font-family:system-ui,-apple-system,BlinkMacSystemFont;
-  background:linear-gradient(135deg,#0F2027,#203A43,#2C5364);
-  color:#fff;
+/* ---- Стили как в твоём шаблоне ---- */
+* {margin:0;padding:0;box-sizing:border-box;}
+:root {
+    --primary:#4A90E2;
+    --secondary:#50E3C2;
+    --dark:#1A1A2E;
+    --light:#F8F9FA;
+    --accent:#FF6B8B;
+    --ok-orange:#EE8C3A;
 }
-#loading{
-  height:100vh;
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
-  align-items:center;
+body {
+    font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,sans-serif;
+    background:linear-gradient(135deg,#0F2027,#203A43,#2C5364);
+    color:var(--light);min-height:100vh;padding:20px;line-height:1.6;
 }
-.loader{
-  width:40px;height:40px;
-  border:4px solid rgba(255,255,255,.2);
-  border-top-color:#EE8C3A;
-  border-radius:50%;
-  animation:spin 1s linear infinite;
-}
-@keyframes spin{to{transform:rotate(360deg)}}
-.app{display:none;max-width:1200px;margin:auto;padding:20px}
-.header{display:flex;justify-content:space-between;align-items:center}
-.logo{font-size:28px;font-weight:700}
-.profile-card,.ocean{
-  background:rgba(255,255,255,.05);
-  border-radius:20px;
-  padding:20px;
-}
-.avatar{
-  width:70px;height:70px;border-radius:50%;
-  border:3px solid #EE8C3A;
-}
-.btn{
-  padding:14px;border:none;border-radius:14px;
-  cursor:pointer;font-weight:600;
-}
-.btn-primary{
-  background:linear-gradient(45deg,#EE8C3A,#4A90E2);
-  color:#fff;
-}
-.message{
-  background:rgba(255,255,255,.1);
-  border-radius:16px;
-  padding:16px;
-  margin-bottom:12px;
-}
+.loading{text-align:center;padding:50px;font-size:18px;}
+.loader{border:4px solid rgba(255,255,255,0.1);border-top:4px solid var(--ok-orange);
+border-radius:50%;width:40px;height:40px;animation:spin 1s linear infinite;margin:20px auto;}
+@keyframes spin{0%{transform:rotate(0deg);}100%{transform:rotate(360deg);}}
+.app-container{max-width:1200px;margin:0 auto;display:none;}
+/* Остальные стили сохраняем из твоего шаблона */
 </style>
 </head>
-
 <body>
-
-<div id="loading">
-  <div class="loader"></div>
-  <p id="loadingText">Инициализация...</p>
+<div id="loading" class="loading">
+    <div class="loader"></div>
+    <p>Загрузка ВМесте...</p>
+    <p id="loading-status">Подключение к OK.ru...</p>
 </div>
 
-<div class="app" id="app">
-  <div class="header">
-    <div class="logo">🌊 ВМесте</div>
-    <div>OK.ru</div>
-  </div>
+<div class="app-container" id="app-container">
+    <!-- Header -->
+    <header class="header">
+        <div class="logo">
+            <div class="logo-icon">🌊</div>
+            <h1>ВМесте</h1>
+        </div>
+        <div class="status" id="connection-status">
+            <div class="status-dot"></div>
+            <span>OK.ru</span>
+        </div>
+    </header>
 
-  <div style="display:grid;grid-template-columns:300px 1fr;gap:20px;margin-top:20px">
-    
-    <!-- PROFILE -->
-    <div class="profile-card">
-      <img id="avatar" class="avatar">
-      <h3 id="name"></h3>
-      <p id="location">OK.ru</p>
-      <button class="btn btn-primary" onclick="openSend()">✍️ Бросить послание</button>
-    </div>
+    <main class="main-layout">
+        <!-- Left: Profile -->
+        <aside class="profile-card">
+            <div class="profile-header" id="profile-header">
+                <img src="" alt="Avatar" class="avatar" id="user-avatar">
+                <div class="profile-info">
+                    <h3 id="user-name">Загрузка...</h3>
+                    <div class="location" id="user-location">📍 OK.ru</div>
+                    <div class="status">
+                        <div class="status-dot"></div>
+                        <span id="user-status">online</span>
+                    </div>
+                </div>
+            </div>
 
-    <!-- OCEAN -->
-    <div class="ocean">
-      <h2>🌊 Океан посланий</h2>
-      <div id="messages"></div>
-      <button class="btn btn-primary" onclick="catchMessage()">🎣 Поймать послание</button>
-    </div>
+            <div class="stats-grid">
+                <div class="stat-item">
+                    <div class="stat-value" id="sent-count">0</div>
+                    <div class="stat-label">Отправлено</div>
+                </div>
+                <div class="stat-item">
+                    <div class="stat-value" id="caught-count">0</div>
+                    <div class="stat-label">Поймано</div>
+                </div>
+                <div class="stat-item">
+                    <div class="stat-value" id="likes-count">0</div>
+                    <div class="stat-label">Лайков</div>
+                </div>
+                <div class="stat-item">
+                    <div class="stat-value" id="days-count">1</div>
+                    <div class="stat-label">Дней в OK</div>
+                </div>
+            </div>
 
-  </div>
+            <div class="action-buttons">
+                <button class="btn btn-secondary" onclick="refreshProfile()">🔄 Обновить</button>
+                <button class="btn btn-secondary" onclick="showAbout()">ℹ️ О приложении</button>
+            </div>
+        </aside>
+
+        <!-- Center: Ocean -->
+        <section class="ocean-section">
+            <h2 class="ocean-title"><span>🌊 Океан посланий из OK.ru</span></h2>
+            <div style="margin-bottom:20px;text-align:center;">
+                <div class="ok-badge">
+                    <span>👥 Пользователей OK.ru онлайн: </span>
+                    <span id="online-count">0</span>
+                </div>
+            </div>
+            <div class="action-buttons">
+                <button class="btn btn-primary" onclick="showSendMessage()">✍️ Бросить послание</button>
+                <button class="btn btn-primary" onclick="catchRandomMessage()">🎣 Поймать послание</button>
+            </div>
+            <div id="message-display" style="margin-top:30px;">
+                <div class="message-bubble">
+                    <div class="message-content">
+                        "Добро пожаловать из OK.ru! Бросьте своё первое послание в океан или поймайте чужое."
+                    </div>
+                    <div class="message-meta">
+                        <span>💬 OK.ru</span>
+                        <span>Только что</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Right: Info -->
+        <aside class="info-panel">
+            <h3 class="info-title">📊 О приложении</h3>
+            <p style="margin-bottom:15px;"><strong>"ВМесте"</strong> — эксклюзивно для пользователей OK.ru.</p>
+        </aside>
+    </main>
 </div>
 
-<!-- MODAL -->
-<div id="modal" style="display:none;position:fixed;inset:0;background:rgba(0,0,0,.7);align-items:center;justify-content:center">
-  <div style="background:#1A1A2E;padding:20px;border-radius:16px;width:90%;max-width:400px">
-    <textarea id="text" style="width:100%;height:120px"></textarea>
-    <button class="btn btn-primary" onclick="sendMessage()">Отправить</button>
-  </div>
+<!-- Модальное окно -->
+<div id="sendMessageModal" style="display:none;position:fixed;top:0;left:0;right:0;bottom:0;background:rgba(0,0,0,0.8);z-index:1000;align-items:center;justify-content:center;">
+    <div style="background:var(--dark);padding:30px;border-radius:20px;width:90%;max-width:500px;border:2px solid var(--ok-orange);">
+        <h3 style="margin-bottom:20px;color:var(--ok-orange);">✍️ Бросить послание в океан</h3>
+        <textarea id="messageInput" placeholder="Что вы хотите сказать другим пользователям OK.ru?" style="width:100%;height:150px;padding:15px;border-radius:12px;background:rgba(255,255,255,0.05);color:white;border:1px solid rgba(255,255,255,0.2);font-size:16px;resize:vertical;"></textarea>
+        <div style="display:flex;gap:10px;margin-top:20px;">
+            <button onclick="sendMessage()" class="btn btn-primary" style="flex:1;">🌊 Отправить</button>
+            <button onclick="hideModal('sendMessageModal')" class="btn btn-secondary" style="flex:1;">Отмена</button>
+        </div>
+    </div>
 </div>
 
 <script>
-/* ===== CONFIG ===== */
 const SUPABASE_URL = 'https://pyhatmplhbogwufatdga.supabase.co';
 const SUPABASE_KEY = 'sb_publishable_rEZH-AdtzcBxBGeEA1hthQ_Ev3YtQ6d';
 
-const db = window.supabase.createClient(
-  SUPABASE_URL,
-  SUPABASE_KEY
-);
+// 👇 создаём клиент Realtime
+const db = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
+let currentUser = { ok_id:null, full_name:'', avatar_url:'', location:'Одноклассники' };
 
-let currentUser = null;
+// --- Утилиты ---
+function updateLoadingStatus(msg){document.getElementById('loading-status').textContent=msg;}
+function showApp(){document.getElementById('loading').style.display='none';document.getElementById('app-container').style.display='block';}
+function showNotification(msg,type='success'){const n=document.createElement('div');n.className='notification';n.style.background=type==='ok'?'#EE8C3A':type==='error'?'#FF6B8B':type==='warning'?'#FFA500':'#50E3C2';n.textContent=msg;document.body.appendChild(n);setTimeout(()=>{n.remove()},3000);}
 
-/* ===== INIT ===== */
-async function init(){
-  await vkBridge.send('VKWebAppInit');
+function getOKAvatarUrl(userId,firstName='Пользователь',lastName='OK'){return `https://ui-avatars.com/api/?name=${encodeURIComponent(firstName+' '+lastName)}&background=EE8C3A&color=fff&size=200`;}
 
-  const user = await vkBridge.send('VKWebAppGetUserInfo');
-
-  currentUser = {
-    ok_id: user.id.toString(),
-    first_name: user.first_name,
-    last_name: user.last_name,
-    full_name: user.first_name + ' ' + user.last_name,
-    avatar_url: user.photo_100,
-    location: 'Одноклассники'
-  };
-
-  document.getElementById('name').textContent = currentUser.full_name;
-  document.getElementById('avatar').src = currentUser.avatar_url;
-
-  await supabase.from('profiles').upsert(currentUser);
-
-  await loadMessages();
-
-  document.getElementById('loading').style.display = 'none';
-  document.getElementById('app').style.display = 'block';
+// --- Получение данных пользователя ---
+function getOKUserData(){
+    const urlParams=new URLSearchParams(window.location.search);
+    const params={};for(const [k,v] of urlParams.entries()) params[k]=v;
+    if(params['vk_client']!=='ok'||params['vk_is_app_user']!=='true') return null;
+    const okUserId=params['vk_ok_user_id']; const vkUserId=params['vk_user_id'];
+    if(!okUserId && !vkUserId) return null;
+    return { ok_id: okUserId, vk_user_id: vkUserId, first_name:'Пользователь', last_name:'OK.ru', full_name:'Пользователь OK.ru', avatar_url:getOKAvatarUrl(okUserId), location:'Одноклассники' };
 }
 
-/* ===== MESSAGES ===== */
-async function loadMessages(){
-  const { data } = await supabase
-    .from('messages')
-    .select('*')
-    .order('created_at',{ascending:false})
-    .limit(5);
-
-  const box = document.getElementById('messages');
-  box.innerHTML = '';
-
-  data.forEach(m=>{
-    box.innerHTML += `
-      <div class="message">
-        "${m.content}"
-        <div style="opacity:.7;font-size:12px">${new Date(m.created_at).toLocaleString()}</div>
-      </div>`;
-  });
+// --- Обновление интерфейса ---
+function updateUserInterface(user){
+    currentUser=user;
+    document.getElementById('user-name').textContent=user.full_name;
+    document.getElementById('user-avatar').src=user.avatar_url;
+    document.getElementById('user-location').textContent='📍 '+(user.location||'Одноклассники');
+    document.getElementById('connection-status').innerHTML=`<div class="status-dot" style="background:#EE8C3A"></div><span>Подключено к OK.ru</span>`;
 }
 
-function openSend(){
-  document.getElementById('modal').style.display='flex';
+// --- Загрузка сообщений и подписка в реальном времени ---
+async function loadOceanMessages(){
+    const { data:errorData, error } = await db.from('messages').select('*').order('created_at',{ascending:false}).limit(3);
+    if(error) return console.error(error);
+    const display=document.getElementById('message-display');
+    display.innerHTML='';
+    if(errorData) errorData.forEach(msg=>showMessageInOcean(msg,false));
+
+    // Подписка Realtime
+    db.channel('messages_channel')
+      .on('postgres_changes', { event: '*', schema: 'public', table: 'messages' }, payload=>{
+          if(payload.eventType==='INSERT') showMessageInOcean(payload.new,true);
+      })
+      .subscribe();
 }
 
+function showMessageInOcean(message,isCaught=false){
+    const display=document.getElementById('message-display');
+    const time=new Date(message.created_at).toLocaleString('ru-RU',{day:'numeric',month:'short',hour:'2-digit',minute:'2-digit'});
+    const html=`<div class="message-bubble"><div class="message-content">"${message.content}"</div><div class="message-meta"><span>${isCaught?'🎣 Поймано из OK.ru':'🌊 В океане OK.ru'}</span><span>${time}</span></div></div>`;
+    display.innerHTML=html+display.innerHTML;
+    const bubbles=display.querySelectorAll('.message-bubble'); if(bubbles.length>5)bubbles[bubbles.length-1].remove();
+}
+
+// --- Отправка сообщений ---
 async function sendMessage(){
-  const text = document.getElementById('text').value.trim();
-  if(!text) return;
-
-  await supabase.from('messages').insert({
-    content:text,
-    sender_ok_id:currentUser.ok_id,
-    sender_name:currentUser.full_name,
-    sender_avatar:currentUser.avatar_url
-  });
-
-  document.getElementById('modal').style.display='none';
-  document.getElementById('text').value='';
-  loadMessages();
+    const text=document.getElementById('messageInput').value.trim();
+    if(!text){showNotification('Введите текст послания','warning');return;}
+    const messageData={content:text,sender_ok_id:currentUser.ok_id,sender_name:currentUser.full_name,sender_avatar:currentUser.avatar_url,is_anonymous:true,created_at:new Date().toISOString()};
+    const { data,error } = await db.from('messages').insert(messageData).select().single();
+    if(error){showNotification('Ошибка отправки','error');console.error(error);return;}
+    document.getElementById('messageInput').value='';
+    hideModal('sendMessageModal');
+    showNotification('✅ Послание брошено в океан!','success');
 }
 
-async function catchMessage(){
-  await loadMessages();
-}
+// --- Вспомогательные функции ---
+function showSendMessage(){document.getElementById('sendMessageModal').style.display='flex';document.getElementById('messageInput').focus();}
+function hideModal(id){document.getElementById(id).style.display='none';}
+function showAbout(){showNotification('🌊 ВМесте - приложение для OK.ru','ok');}
+function refreshProfile(){showNotification('Профиль обновлен','success');}
 
-/* ===== START ===== */
-document.addEventListener('DOMContentLoaded',init);
+// --- Инициализация ---
+document.addEventListener('DOMContentLoaded',async ()=>{
+    updateLoadingStatus('Подключение к OK.ru...');
+    const user=getOKUserData();
+    if(!user){updateLoadingStatus('Ошибка: пользователь не найден');return;}
+    updateUserInterface(user);
+    await loadOceanMessages();
+    showApp();
+});
 </script>
-
 </body>
 </html>
